fix: overflow-x

--- a/client/src/stylesheets/game/phases/NewRound.scss
+++ b/client/src/stylesheets/game/phases/NewRound.scss
@@ -11,5 +11,5 @@
   background-color: $light-shade-05;
   height: 95%;
   overflow-y: auto;
-  //overflow-x: hidden;
+  overflow-x: hidden;
 }
